fix : fixing swagger ui
